--- a/src/app/transferstatus/transferstatus.component.html
+++ b/src/app/transferstatus/transferstatus.component.html
@@ -24,15 +24,15 @@
 <div class="row">
 <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
     <!-- S.No Column -->
-    <ng-container matColumnDef="sno">
-      <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>S No </th>
-      <td mat-cell *matCellDef="let element"> {{element.sno}} </td>
+    <ng-container matColumnDef="Id">
+      <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>Id </th>
+      <td mat-cell *matCellDef="let element"> {{element.Id}} </td>
     </ng-container>
   
-    <!-- Transfer ID Column -->
-     <ng-container matColumnDef="transferid">
-      <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Transfer ID </th>
-      <td mat-cell *matCellDef="let element"> {{element.transferid}} </td>
+    <!-- UserId Column -->
+     <ng-container matColumnDef="UserId">
+      <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> UserId </th>
+      <td mat-cell *matCellDef="let element"> {{element.UserId}} </td>
     </ng-container> 
   
     <!-- User ID Column -->
