--- a/src/app/user-List/user-List.component.html
+++ b/src/app/user-List/user-List.component.html
@@ -12,43 +12,37 @@
           <!-- S.No Column -->
               <ng-container matColumnDef="sno">
                 <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>S No </th>
-                <td mat-cell *matCellDef="let element"> {{element.sno}} </td>
+                <td mat-cell *matCellDef="let element"> {{element.Id}} </td>
               </ng-container>
         
           <!-- User Name Column -->
               <ng-container matColumnDef="username">
                 <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Username </th>
-                <td mat-cell *matCellDef="let element"> {{element.username}} </td>
+                <td mat-cell *matCellDef="let element"> {{element.Username}} </td>
               </ng-container> 
         
           <!-- Password Column -->
               <ng-container matColumnDef="password">
                 <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Password </th>
-                <td mat-cell *matCellDef="let element"> {{element.password}} </td>
+                <td mat-cell *matCellDef="let element"> {{element.Password}} </td>
               </ng-container>
         
           <!-- Job Id Column -->
-                <ng-container matColumnDef="jobid">
-                    <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>Job ID </th>
-                    <td mat-cell *matCellDef="let element"> {{element.jobid}} </td>
+                <ng-container matColumnDef="AuditDetailId">
+                    <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>AuditDetailId </th>
+                    <td mat-cell *matCellDef="let element"> {{element.AuditDetailId}} </td>
                   </ng-container>
 
             <!-- supervisor Column -->
-                <ng-container matColumnDef="supervisor">
-                  <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Supervisor </th>
-                  <td mat-cell *matCellDef="let element"> {{element.supervisor}} </td>
+                <ng-container matColumnDef="UserRoles">
+                  <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> UserRoles </th>
+                  <td mat-cell *matCellDef="let element"> {{element.UserRoles}} </td>
                 </ng-container> 
         
             <!-- folderpath Column -->
-                <ng-container matColumnDef="folderpath">
-                    <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> FolderPath</th>
-                    <td mat-cell *matCellDef="let element"> {{element.folderpath}} </td>
-                  </ng-container>
-
-            <!-- Device ID Column -->
-                <ng-container matColumnDef="deviceid">
-                    <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Device ID </th>
-                    <td mat-cell *matCellDef="let element"> {{element.deviceid}} </td>
+                <ng-container matColumnDef="Setting">
+                    <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Setting</th>
+                    <td mat-cell *matCellDef="let element"> {{element.Setting}} </td>
                   </ng-container>
 
             <!-- Action ID Column -->
