--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -27,7 +27,7 @@
                         <div class="card-icon lightcoral">
                             <i class="material-icons">people_outline</i>
                         </div>
-                        <p class="card-category">Technicians</p>
+                        <p class="card-category"><b>Technicians</b></p>
                         <h3 class="card-title">1540
                            
                         </h3>
