--- a/src/app/transferstatus/transferstatus.component.html
+++ b/src/app/transferstatus/transferstatus.component.html
@@ -29,58 +29,52 @@
       <td mat-cell *matCellDef="let element"> {{element.Id}} </td>
     </ng-container>
   
-    <!-- UserId Column -->
-     <ng-container matColumnDef="UserId">
-      <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> UserId </th>
-      <td mat-cell *matCellDef="let element"> {{element.UserId}} </td>
-    </ng-container> 
-  
     <!-- User ID Column -->
-     <ng-container matColumnDef="userid">
+     <ng-container matColumnDef="UserId">
       <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> User ID </th>
-      <td mat-cell *matCellDef="let element"> {{element.userid}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.UserId}} </td>
     </ng-container>
   
-     <!-- Supervisor Column -->
-    <ng-container matColumnDef="supervisor">
-      <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Supervisor </th>
-      <td mat-cell *matCellDef="let element"> {{element.supervisor}} </td>
+    <!-- Job Unique Id Column -->
+    <ng-container matColumnDef="JobUniqueId">
+      <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>Job Unique Id</th>
+      <td mat-cell *matCellDef="let element"> {{element.JobUniqueId}} </td>
     </ng-container> 
 
-    <!-- Size Column -->
-    <ng-container matColumnDef="size">
-      <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Size </th>
-      <td mat-cell *matCellDef="let element"> {{element.size}} </td>
+     <!-- SourceFilePath Column -->
+    <ng-container matColumnDef="SourceFilePath">
+      <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> SourceFilePath </th>
+      <td mat-cell *matCellDef="let element"> {{element.SourceFilePath}} </td>
+    </ng-container> 
+
+    <!-- DestinationFilePath Column -->
+    <ng-container matColumnDef="DestinationFilePath">
+      <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> DestinationFilePath </th>
+      <td mat-cell *matCellDef="let element"> {{element.DestinationFilePath}} </td>
     </ng-container>
 
-    <!-- Folder Name Column -->
-    <ng-container matColumnDef="foldername">
-      <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Folder Name </th>
-      <td mat-cell *matCellDef="let element"> {{element.foldername}} </td>
+    <!-- TotalFileSize Column -->
+    <ng-container matColumnDef="TotalFileSize">
+      <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> TotalFileSize </th>
+      <td mat-cell *matCellDef="let element"> {{element.TotalFileSize}} </td>
     </ng-container>
 
-    <!-- Photo Column -->
-    <ng-container matColumnDef="photo">
-      <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Photo</th>
-      <td mat-cell *matCellDef="let element"> {{element.photo}} </td>
+    <!-- Status Column -->
+    <ng-container matColumnDef="Status">
+      <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Status</th>
+      <td mat-cell *matCellDef="let element"> {{element.Status}} </td>
     </ng-container>
 
-    <!-- Reads Column -->
-    <ng-container matColumnDef="reads">
-      <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Reads</th>
-      <td mat-cell *matCellDef="let element"> {{element.reads}} </td>
+    <!-- Reason Column -->
+    <ng-container matColumnDef="Reason">
+      <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Reason</th>
+      <td mat-cell *matCellDef="let element"> {{element.Reason} </td>
     </ng-container>
 
-    <!-- Bills Column -->
-    <ng-container matColumnDef="bills">
-      <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Bills </th>
-      <td mat-cell *matCellDef="let element"> {{element.bills}} </td>
-    </ng-container>
-
-    <!-- Overall Status Column -->
-    <ng-container matColumnDef="overallstatus">
-      <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Overall status </th>
-      <td mat-cell *matCellDef="let element"> {{element.overallstatus}} </td>
+    <!-- SyncType Column -->
+    <ng-container matColumnDef="SyncType">
+      <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> SyncType </th>
+      <td mat-cell *matCellDef="let element"> {{element.SyncType}} </td>
     </ng-container>
 
     <!-- Action Column -->
@@ -95,9 +89,6 @@
      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
-      
- 
-
 </div>
 <mat-paginator
 #TableOnePaginator="matPaginator"
