--- a/src/app/user-List/user-List.component.html
+++ b/src/app/user-List/user-List.component.html
@@ -27,23 +27,30 @@
                 <td mat-cell *matCellDef="let element"> {{element.Password}} </td>
               </ng-container>
         
-          <!-- Job Id Column -->
-                <ng-container matColumnDef="AuditDetailId">
-                    <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>AuditDetailId </th>
-                    <td mat-cell *matCellDef="let element"> {{element.AuditDetailId}} </td>
+          <!-- Job title Column -->
+                <ng-container matColumnDef="jobtitle">
+                    <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>Job Title</th>
+                    <td mat-cell *matCellDef="let element"> {{element.jobtitle}} </td>
                   </ng-container>
 
             <!-- supervisor Column -->
-                <ng-container matColumnDef="UserRoles">
-                  <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> UserRoles </th>
-                  <td mat-cell *matCellDef="let element"> {{element.UserRoles}} </td>
+                <ng-container matColumnDef="supervisor">
+                  <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> supervisor </th>
+                  <td mat-cell *matCellDef="let element"> {{element.supervisor}} </td>
                 </ng-container> 
         
             <!-- folderpath Column -->
-                <ng-container matColumnDef="Setting">
-                    <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Setting</th>
-                    <td mat-cell *matCellDef="let element"> {{element.Setting}} </td>
+                <ng-container matColumnDef="folderpath">
+                    <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> folderpath</th>
+                    <td mat-cell *matCellDef="let element"> {{element.folderpath}} </td>
                   </ng-container>
+
+            <!-- Device Id Column -->
+                <ng-container matColumnDef="deviceid">
+                  <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Device Id</th>
+                  <td mat-cell *matCellDef="let element"> {{element.deviceid}} </td>
+                </ng-container>
+
 
             <!-- Action ID Column -->
                     <ng-container matColumnDef="action">
