--- a/src/app/user-List/user-List.component.html
+++ b/src/app/user-List/user-List.component.html
@@ -28,28 +28,28 @@
               </ng-container>
         
           <!-- Job title Column -->
-                <ng-container matColumnDef="jobtitle">
+                <!-- <ng-container matColumnDef="jobtitle">
                     <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>Job Title</th>
                     <td mat-cell *matCellDef="let element"> {{element.jobtitle}} </td>
-                  </ng-container>
+                  </ng-container> -->
 
             <!-- supervisor Column -->
-                <ng-container matColumnDef="supervisor">
+                <!-- <ng-container matColumnDef="supervisor">
                   <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> supervisor </th>
                   <td mat-cell *matCellDef="let element"> {{element.supervisor}} </td>
-                </ng-container> 
+                </ng-container>  -->
         
             <!-- folderpath Column -->
-                <ng-container matColumnDef="folderpath">
+                <!-- <ng-container matColumnDef="folderpath">
                     <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> folderpath</th>
                     <td mat-cell *matCellDef="let element"> {{element.folderpath}} </td>
-                  </ng-container>
+                  </ng-container> -->
 
             <!-- Device Id Column -->
-                <ng-container matColumnDef="deviceid">
+                <!-- <ng-container matColumnDef="deviceid">
                   <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Device Id</th>
                   <td mat-cell *matCellDef="let element"> {{element.deviceid}} </td>
-                </ng-container>
+                </ng-container> -->
 
 
             <!-- Action ID Column -->
