--- a/src/app/transferstatus/transferstatus.component.html
+++ b/src/app/transferstatus/transferstatus.component.html
@@ -24,8 +24,8 @@
       <div class="row">
         <table mat-table matSort [dataSource]="dataSourceOne"cx #TableOneSort="matSort" class="mat-elevation-z8 col-md-12" >
             <!-- S.No Column -->
-            <ng-container matColumnDef="Id">
-              <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>Id </th>
+            <ng-container matColumnDef="Sno">
+              <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>S.No </th>
               <td mat-cell *matCellDef="let i = index"> {{i + 1 +(TableOnePaginator.pageIndex * TableOnePaginator.pageSize)}} </td>
             </ng-container>
           
