--- a/src/app/user-List/user-List.component.html
+++ b/src/app/user-List/user-List.component.html
@@ -54,7 +54,19 @@
                   <td mat-cell *matCellDef="let element"> {{element.DeviceId}} </td>
                 </ng-container>
 
-
+            <!-- Status Column -->
+            <ng-container matColumnDef="Status">
+              <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Status</th>
+              <td mat-cell *matCellDef="let element">
+                <!-- <button mat-icon-button color="blue" *ngIf="element.IsActive">
+                  <mat-icon>visibility</mat-icon>
+                </button> -->
+                <button mat-icon-button color="blue" *ngIf="element.IsActive == false">
+                  <mat-icon>visibility off</mat-icon>
+              </button>
+              </td>
+            </ng-container>
+            
             <!-- Action ID Column -->
                 <ng-container matColumnDef="action">
                   <th class="tab-head" mat-header-cell *matHeaderCellDef>Action</th>
