--- a/src/app/transferstatus/transferstatus.component.html
+++ b/src/app/transferstatus/transferstatus.component.html
@@ -5,7 +5,7 @@
         <div class="col-lg-3">          
           <mat-form-field >
               <mat-label>Choose a date</mat-label>
-              <input matInput [matDatepicker]="picker" [(ngModel)]="datepicker" name="datepicker" (ngModelChange)="changeDate()">
+              <input matInput [matDatepicker]="picker" [(ngModel)]="transHistoryFilter.StartDate" name="StartDate" (ngModelChange)="changeDate()">
               <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
               <mat-datepicker #picker></mat-datepicker>
             </mat-form-field>
@@ -14,7 +14,7 @@
           <div class="navbar-collapse justify-content-end" id="navigation">
             <form class="navbar-form">
                 <mat-form-field>
-                  <input matInput (keyup)="applyFilterOne($event.target.value)" placeholder="Search"/>
+                  <input matInput (keyup)="applyFilterOne($event.target.value)" [(ngModel)]="transHistoryFilter.Search" placeholder="Search"/>
                 </mat-form-field>
             </form>        
           </div>
